# emoji

./: ChangeLog  Makefile.am  README.md  configure.ac
debian/: control.in  emojione.postinst  rules  twemoji.postinst
