## ExampleLib Example: an example of using Automake to link with a library

AC_INIT([emoji], [1.3], [bernd@net2o.de], [emoji font packages],
        [https://github.com/forthy42/emoji])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([debian/control])
AC_CONFIG_FILES([debian/changelog])
AC_OUTPUT
